--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -28,7 +28,7 @@
 				android:layout_marginStart="24dp"
 				android:layout_marginTop="24dp"
 				android:layout_marginEnd="24dp"
-				android:hint="Username"
+				android:hint="@string/username"
 				app:counterEnabled="true"
 				app:counterMaxLength="20"
 				app:errorEnabled="true"
@@ -52,7 +52,7 @@
 				android:layout_marginStart="24dp"
 				android:layout_marginTop="8dp"
 				android:layout_marginEnd="24dp"
-				android:hint="Email"
+				android:hint="@string/email"
 				app:errorEnabled="true"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
 				android:layout_marginStart="24dp"
 				android:layout_marginTop="8dp"
 				android:layout_marginEnd="24dp"
-				android:hint="Password"
+				android:hint="@string/password"
 				app:counterEnabled="true"
 				app:counterMaxLength="30"
 				app:endIconDrawable="@drawable/ic_baseline_error_outline_24"
@@ -103,7 +103,7 @@
 				android:layout_marginStart="24dp"
 				android:layout_marginTop="8dp"
 				android:layout_marginEnd="24dp"
-				android:hint="Confirm Password"
+				android:hint="@string/confirm_password"
 				app:errorEnabled="true"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +122,7 @@
 				android:layout_width="140dp"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="32dp"
-				android:text="Sumbit"
+				android:text="@string/submit"
 				app:icon="@drawable/ic_baseline_check_24"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
