--- a/app/src/main/res/layout/layout_bottom_modal_post_limit.xml
+++ b/app/src/main/res/layout/layout_bottom_modal_post_limit.xml
@@ -26,8 +26,9 @@
 		android:layout_height="match_parent"
 		android:paddingStart="30dp"
 		android:paddingTop="25dp"
+		android:paddingEnd="0dp"
 		android:paddingBottom="15dp"
-		android:text="Sorts posts by"
+		android:text="@string/sorts_posts_by"
 		android:textAllCaps="true"
 		android:textSize="15sp"
 		android:textStyle="bold"/>
@@ -49,6 +50,7 @@
 			android:layout_marginStart="16dp"
 			android:layout_marginTop="16dp"
 			android:layout_marginBottom="16dp"
+			android:contentDescription=""
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
@@ -59,7 +61,7 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="16dp"
-			android:text="All Posts"
+			android:text="@string/all_posts"
 			android:textSize="16sp"
 			app:layout_constraintBottom_toBottomOf="@+id/modalPostsLimit_image_all"
 			app:layout_constraintStart_toEndOf="@+id/modalPostsLimit_image_all"
@@ -72,6 +74,7 @@
 			android:layout_marginTop="8dp"
 			android:layout_marginEnd="24dp"
 			android:layout_marginBottom="8dp"
+			android:contentDescription=""
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
@@ -96,6 +99,7 @@
 			android:layout_marginStart="16dp"
 			android:layout_marginTop="16dp"
 			android:layout_marginBottom="16dp"
+			android:contentDescription=""
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
@@ -106,7 +110,7 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="16dp"
-			android:text="Hot"
+			android:text="@string/hot"
 			android:textSize="16sp"
 			app:layout_constraintBottom_toBottomOf="@+id/modalPostsLimit_image_hot"
 			app:layout_constraintStart_toEndOf="@+id/modalPostsLimit_image_hot"
@@ -119,6 +123,7 @@
 			android:layout_marginTop="8dp"
 			android:layout_marginEnd="24dp"
 			android:layout_marginBottom="8dp"
+			android:contentDescription=""
 			android:visibility="gone"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -145,6 +150,7 @@
 			android:layout_marginStart="16dp"
 			android:layout_marginTop="16dp"
 			android:layout_marginBottom="16dp"
+			android:contentDescription=""
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
@@ -155,7 +161,7 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="16dp"
-			android:text="Random"
+			android:text="@string/random"
 			android:textSize="16sp"
 			app:layout_constraintBottom_toBottomOf="@+id/modalPostsLimit_image_random"
 			app:layout_constraintStart_toEndOf="@+id/modalPostsLimit_image_random"
@@ -168,6 +174,7 @@
 			android:layout_marginTop="8dp"
 			android:layout_marginEnd="24dp"
 			android:layout_marginBottom="8dp"
+			android:contentDescription=""
 			android:visibility="gone"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -193,6 +200,7 @@
 			android:layout_marginStart="16dp"
 			android:layout_marginTop="16dp"
 			android:layout_marginBottom="16dp"
+			android:contentDescription=""
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
@@ -203,7 +211,7 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="16dp"
-			android:text="Following"
+			android:text="@string/following"
 			android:textSize="16sp"
 			app:layout_constraintBottom_toBottomOf="@+id/modalPostsLimit_image_following"
 			app:layout_constraintStart_toEndOf="@+id/modalPostsLimit_image_following"
@@ -221,7 +229,8 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			app:srcCompat="@drawable/ic_baseline_check_24"
-			app:tint="@color/green"/>
+			app:tint="@color/green"
+			android:contentDescription=""/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
