--- a/app/src/main/res/layout/layout_image_display_gridview_item.xml
+++ b/app/src/main/res/layout/layout_image_display_gridview_item.xml
@@ -17,7 +17,8 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		tools:srcCompat="@tools:sample/backgrounds/scenic"/>
+		tools:srcCompat="@tools:sample/backgrounds/scenic"
+		android:contentDescription=""/>
 	
 	<TextView
 		android:id="@+id/textView24"
