--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -28,10 +28,10 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="8dp"
 		android:paddingTop="@dimen/nav_header_vertical_spacing"
-		android:text="Welcome"
+		android:text="@string/welcome"
 		android:textAlignment="center"
 		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-		android:textSize="20dp"
+		android:textSize="20sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="1.0"
 		app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="14dp"
-		android:text="Login"
+		android:text="@string/login"
 		app:icon="@drawable/ic_baseline_login_24"
 		app:iconGravity="textStart"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -54,8 +54,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="14dp"
-		android:text="Sign Out"
-		app:icon="@drawable/ic_baseline_arrow_back_24"
+		android:text="@string/sign_out"
+		app:icon="@drawable/ic_baseline_logout_24"
 		app:iconGravity="textStart"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
