--- a/app/src/main/res/drawable/ic_baseline_logout_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_logout_24.xml
@@ -6,5 +6,5 @@
 	android:viewportHeight="24">
 	<path
 		android:fillColor="@android:color/white"
-		android:pathData="M11,7L9.6,8.4l2.6,2.6H2v2h10.2l-2.6,2.6L11,17l5,-5L11,7zM20,19h-8v2h8c1.1,0 2,-0.9 2,-2V5c0,-1.1 -0.9,-2 -2,-2h-8v2h8V19z"/>
+		android:pathData="M17,7l-1.41,1.41L18.17,11H8v2h10.17l-2.58,2.58L17,17l5,-5zM4,5h8V3H4c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h8v-2H4V5z"/>
 </vector>
