--- a/app/src/main/res/layout/bottom_sheet_tag_input.xml
+++ b/app/src/main/res/layout/bottom_sheet_tag_input.xml
@@ -41,7 +41,7 @@
 		android:id="@+id/bottomSheetDialog_text_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Add New Tag"
+		android:text="@string/add_new_tag"
 		android:textSize="24sp"
 		app:layout_constraintBottom_toBottomOf="@+id/bottomSheetDialog_button_check"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
 			android:id="@+id/bottomSheetDialog_editText_tag"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:hint="Your Tag"
+			android:hint="@string/your_tag"
 			android:maxLength="20"
 			android:maxLines="1"/>
 	</com.google.android.material.textfield.TextInputLayout>
