--- a/app/src/main/res/layout/dropdown_text_item.xml
+++ b/app/src/main/res/layout/dropdown_text_item.xml
@@ -2,9 +2,10 @@
 
 <TextView
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:padding="14dp"
-	android:text="TextView"
 	android:textSize="16sp"
-	android:textStyle="bold"/>
+	android:textStyle="bold"
+	tools:text="TextView"/>
