--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,7 +66,8 @@
 									android:layout_height="26dp"
 									android:layout_marginEnd="10dp"
 									android:layout_weight="1"
-									android:src="@drawable/ic_baseline_widgets_24"/>
+									android:src="@drawable/ic_baseline_widgets_24"
+									android:contentDescription=""/>
 								
 								<TextView
 									android:id="@+id/main_text_postsLimit"
@@ -74,13 +75,14 @@
 									android:layout_height="wrap_content"
 									android:layout_marginEnd="5dp"
 									android:layout_weight="1"
-									android:text="All Posts"/>
+									android:text="@string/all_posts"/>
 								
 								<ImageView
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
 									android:layout_weight="1"
-									android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
+									android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+									android:contentDescription=""/>
 							</LinearLayout>
 							
 							<com.google.android.material.textfield.TextInputLayout
@@ -100,7 +102,7 @@
 								<com.google.android.material.textfield.TextInputEditText
 									android:layout_width="match_parent"
 									android:layout_height="wrap_content"
-									android:hint="Search"
+									android:hint="@string/search"
 									android:maxLines="1"
 									android:paddingTop="0dp"
 									android:paddingBottom="0dp"
@@ -124,14 +126,15 @@
 						android:id="@+id/imageView3"
 						android:layout_width="100dp"
 						android:layout_height="100dp"
-						android:src="@drawable/ic_baseline_public_24"/>
+						android:src="@drawable/ic_baseline_public_24"
+						android:contentDescription=""/>
 					
 					<TextView
 						android:id="@+id/textView7"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="16dp"
-						android:text="Be the first"
+						android:text="@string/be_the_first"
 						android:textSize="24sp"
 						android:textStyle="bold"/>
 					
@@ -139,7 +142,7 @@
 						android:id="@+id/textView8"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="Tell the rest"
+						android:text="@string/tell_the_rest"
 						android:textSize="24sp"
 						android:textStyle="bold"/>
 				</androidx.appcompat.widget.LinearLayoutCompat>
