--- a/app/src/main/res/layout/fragment_user_followers.xml
+++ b/app/src/main/res/layout/fragment_user_followers.xml
@@ -10,6 +10,7 @@
 		android:id="@+id/followers_recyclerView"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
+		android:padding="5dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
