--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -56,7 +56,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_marginTop="8dp"
-					android:text="RainbowWolfer"
+					tools:text="RainbowWolfer"
 					android:textSize="24sp"
 					android:textStyle="bold"
 					app:layout_constraintEnd_toEndOf="@+id/user_image_avatar"
@@ -67,7 +67,7 @@
 					android:id="@+id/user_text_email"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="RainbowWolfer@outlook.com"
+					tools:text="RainbowWolfer@outlook.com"
 					android:textSize="16sp"
 					app:layout_constraintEnd_toEndOf="@+id/user_image_avatar"
 					app:layout_constraintStart_toStartOf="@+id/user_image_avatar"
@@ -88,14 +88,14 @@
 						android:id="@+id/user_button_message"
 						android:layout_width="180dp"
 						android:layout_height="wrap_content"
-						android:text="Message"
+						android:text="@string/personal_message"
 						app:icon="@drawable/ic_baseline_message_24"/>
 					
 					<com.google.android.material.button.MaterialButton
 						android:id="@+id/user_follow_button"
 						android:layout_width="180dp"
 						android:layout_height="wrap_content"
-						android:text="Follow"
+						android:text="@string/follow"
 						app:icon="@drawable/ic_baseline_favorite_border_24"/>
 				</LinearLayout>
 				
@@ -115,14 +115,14 @@
 						android:id="@+id/user_button_editAvatar"
 						android:layout_width="200dp"
 						android:layout_height="wrap_content"
-						android:text="Edit Avatar"
+						android:text="@string/edit_avatar"
 						app:icon="@drawable/ic_baseline_person_24"/>
 					
 					<com.google.android.material.button.MaterialButton
 						android:id="@+id/user_button_editUsername"
 						android:layout_width="200dp"
 						android:layout_height="wrap_content"
-						android:text="Edit Username"
+						android:text="@string/edit_username"
 						app:icon="@drawable/ic_baseline_edit_24"/>
 				</LinearLayout>
 			
@@ -159,7 +159,7 @@
 				android:layout_marginStart="8dp"
 				android:layout_marginTop="16dp"
 				android:layout_marginEnd="16dp"
-				android:text="Profile Description"
+				android:text="@string/profile_description"
 				android:textAlignment="viewStart"
 				android:textSize="16sp"
 				android:textStyle="bold"
