--- a/app/src/main/res/layout/fragment_welcome1.xml
+++ b/app/src/main/res/layout/fragment_welcome1.xml
@@ -48,7 +48,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="Next"
+		android:text="@string/next"
 		android:textColor="@color/teal_200"
 		android:textSize="24sp"
 		android:textStyle="bold"
