--- a/app/src/main/res/layout/fragment_welcome2.xml
+++ b/app/src/main/res/layout/fragment_welcome2.xml
@@ -48,7 +48,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="Finish"
+		android:text="@string/finish"
 		android:textColor="@color/teal_200"
 		android:textSize="24sp"
 		android:textStyle="bold"
@@ -69,7 +69,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="Previous"
+		android:text="@string/previous"
 		android:textColor="@color/teal_200"
 		android:textSize="24sp"
 		android:textStyle="bold"
