--- a/app/src/main/res/layout/layout_change_username.xml
+++ b/app/src/main/res/layout/layout_change_username.xml
@@ -19,7 +19,7 @@
 		android:layout_marginTop="15dp"
 		android:layout_marginEnd="25dp"
 		android:layout_marginBottom="15dp"
-		android:text="Change your username"
+		android:text="@string/change_your_username"
 		android:textAlignment="viewStart"
 		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
 		android:textSize="22sp"
@@ -50,7 +50,7 @@
 			android:id="@+id/newUsername_editText_new"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:hint="New Username"
+			android:hint="@string/new_username"
 			android:maxLines="1"/>
 	</com.google.android.material.textfield.TextInputLayout>
 	
@@ -77,7 +77,7 @@
 		android:layout_marginBottom="15dp"
 		android:background="@drawable/enable_disable_button_background"
 		android:enabled="false"
-		android:text="Confirm"
+		android:text="@string/confirm"
 		android:textColor="@drawable/enable_disable_button_foreground"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintRight_toRightOf="parent"
@@ -90,7 +90,7 @@
 		android:layout_marginTop="5dp"
 		android:background="@drawable/enable_disable_button_background"
 		android:enabled="true"
-		android:text="Back"
+		android:text="@string/back"
 		android:textColor="@drawable/enable_disable_button_foreground"
 		app:iconTint="@color/purple_500"
 		app:layout_constraintRight_toLeftOf="@id/newUsername_button_confirm"
