--- a/app/src/main/res/layout/main_row_layout_end.xml
+++ b/app/src/main/res/layout/main_row_layout_end.xml
@@ -26,7 +26,7 @@
 		android:foreground="@drawable/ripple_small_corners"
 		android:minWidth="180dp"
 		android:padding="10dp"
-		android:text="You have reached the end"
+		android:text="@string/end_row_text_1"
 		android:textAlignment="center"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
