--- a/app/src/main/res/layout/request_login_layout.xml
+++ b/app/src/main/res/layout/request_login_layout.xml
@@ -19,6 +19,7 @@
 			android:id="@+id/imageView2"
 			android:layout_width="120dp"
 			android:layout_height="120dp"
+			android:contentDescription=""
 			app:srcCompat="@drawable/ic_baseline_mood_bad_24"/>
 		
 		<TextView
@@ -28,7 +29,7 @@
 			android:layout_marginStart="8dp"
 			android:layout_marginTop="12dp"
 			android:layout_marginEnd="8dp"
-			android:text="You have not logged in"
+			android:text="@string/you_have_not_signed_in"
 			android:textSize="36sp"/>
 		
 		<com.google.android.material.button.MaterialButton
@@ -36,7 +37,7 @@
 			android:layout_width="150dp"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="8dp"
-			android:text="Login"
+			android:text="@string/login"
 			app:icon="@drawable/ic_baseline_login_24"
 			app:iconGravity="textStart"/>
 	</LinearLayout>
