--- a/app/src/main/res/layout/row_collection_empty_layout.xml
+++ b/app/src/main/res/layout/row_collection_empty_layout.xml
@@ -29,7 +29,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="No Collections"
+		android:text="@string/no_collections"
 		android:textAlignment="center"
 		android:textSize="24sp"
 		android:textStyle="bold"/>
