--- a/app/src/main/res/layout/row_collection_post_layout.xml
+++ b/app/src/main/res/layout/row_collection_post_layout.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:layout_margin="5dp"
@@ -16,10 +17,10 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:text="9"
 		app:layout_constraintBottom_toBottomOf="@+id/rowCollectionPost_icon_image"
 		app:layout_constraintStart_toEndOf="@+id/rowCollectionPost_icon_image"
-		app:layout_constraintTop_toTopOf="@+id/rowCollectionPost_icon_image"/>
+		app:layout_constraintTop_toTopOf="@+id/rowCollectionPost_icon_image"
+		tools:text="9"/>
 	
 	<TextView
 		android:id="@+id/rowCollectionPost_text_username"
@@ -66,17 +67,18 @@
 		android:layout_marginBottom="8dp"
 		android:ellipsize="end"
 		android:maxLines="3"
-		android:text="@string/welcome1_text"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/rowCollectionPost_text_username"/>
+		app:layout_constraintTop_toBottomOf="@+id/rowCollectionPost_text_username"
+		tools:text="@string/welcome1_text"/>
 	
 	<ImageView
 		android:id="@+id/rowCollectionPost_icon_image"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
+		android:contentDescription=""
 		app:layout_constraintBottom_toBottomOf="@+id/rowCollectionPost_text_username"
 		app:layout_constraintStart_toEndOf="@+id/rowCollectionPost_icon_repost"
 		app:layout_constraintTop_toTopOf="@+id/rowCollectionPost_text_username"
@@ -98,7 +100,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
-		android:text="POST"
+		android:text="@string/post"
 		android:textStyle="bold|italic"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"/>
@@ -111,5 +113,6 @@
 		android:text="-"
 		app:layout_constraintBottom_toBottomOf="@+id/rowCollectionPost_text_title"
 		app:layout_constraintStart_toEndOf="@+id/rowCollectionPost_text_title"
-		app:layout_constraintTop_toTopOf="@+id/rowCollectionPost_text_title"/>
+		app:layout_constraintTop_toTopOf="@+id/rowCollectionPost_text_title"
+		tools:ignore="HardcodedText"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
