--- a/app/src/main/res/layout/row_comment_end_layout.xml
+++ b/app/src/main/res/layout/row_comment_end_layout.xml
@@ -29,7 +29,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="Loading"
+		android:text="@string/loading"
 		android:textSize="20sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
