--- a/app/src/main/res/layout/row_comment_layout.xml
+++ b/app/src/main/res/layout/row_comment_layout.xml
@@ -4,6 +4,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_marginTop="10dp"
 	android:paddingBottom="10dp">
 	
@@ -28,7 +29,7 @@
 		android:layout_marginEnd="16dp"
 		android:ellipsize="end"
 		android:maxLines="1"
-		android:text="RainbowWolfer"
+		tools:text="RainbowWolfer"
 		android:textSize="18sp"
 		android:textStyle="bold"
 		app:layout_constraintEnd_toStartOf="@+id/commentRow_button_more"
@@ -40,7 +41,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
-		android:text="2022/11/11 11:11:11"
+		tools:text="2022/11/11 11:11:11"
 		app:layout_constraintBottom_toBottomOf="@+id/commentRow_image_avatar"
 		app:layout_constraintStart_toEndOf="@+id/commentRow_image_avatar"/>
 	
@@ -63,7 +64,7 @@
 		android:layout_marginStart="24dp"
 		android:layout_marginTop="8dp"
 		android:layout_marginEnd="16dp"
-		android:text="@string/welcome2_text"
+		tools:text="@string/welcome2_text"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/commentRow_image_avatar"/>
@@ -97,7 +98,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="8dp"
-		android:text="21"
+		tools:text="21"
 		android:textSize="18sp"
 		app:layout_constraintBottom_toBottomOf="@+id/commentRow_button_upvote"
 		app:layout_constraintEnd_toStartOf="@+id/commentRow_button_upvote"
