--- a/app/src/main/res/layout/row_empty_layout.xml
+++ b/app/src/main/res/layout/row_empty_layout.xml
@@ -30,7 +30,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="Nothing Here"
+		android:text="@string/nothing_here"
 		android:textSize="24sp"
 		android:textStyle="bold"
 		app:layout_constraintEnd_toEndOf="parent"
