--- a/app/src/main/res/layout/row_followers_empty_layout.xml
+++ b/app/src/main/res/layout/row_followers_empty_layout.xml
@@ -26,7 +26,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="No Followers"
+		android:text="@string/no_followers"
 		android:textAlignment="center"
 		android:textSize="20sp"
 		android:textStyle="bold"/>
