--- a/app/src/main/res/menu/collection_item_more_menu.xml
+++ b/app/src/main/res/menu/collection_item_more_menu.xml
@@ -3,5 +3,5 @@
 	<item
 		android:id="@+id/item_delete"
 		android:icon="@drawable/ic_baseline_delete_forever_24"
-		android:title="Delete"/>
+		android:title="@string/delete"/>
 </menu>
