--- a/app/src/main/res/menu/collections_menu.xml
+++ b/app/src/main/res/menu/collections_menu.xml
@@ -4,6 +4,6 @@
 	<item
 		android:id="@+id/item_refresh"
 		android:icon="@drawable/ic_baseline_refresh_24"
-		android:title="Refresh"
+		android:title="@string/refresh"
 		app:showAsAction="always"/>
 </menu>
