--- a/app/src/main/res/menu/display_image_menu.xml
+++ b/app/src/main/res/menu/display_image_menu.xml
@@ -4,6 +4,6 @@
 	<item
 		android:id="@+id/item_download"
 		android:icon="@drawable/ic_baseline_arrow_downward_24"
-		android:title="Download"
+		android:title="@string/download"
 		app:showAsAction="always"/>
 </menu>
