--- a/app/src/main/res/menu/draft_more_menu.xml
+++ b/app/src/main/res/menu/draft_more_menu.xml
@@ -3,9 +3,9 @@
 	<item
 		android:id="@+id/item_edit"
 		android:icon="@drawable/ic_baseline_edit_24"
-		android:title="Edit"/>
+		android:title="@string/edit"/>
 	<item
 		android:id="@+id/item_delete"
 		android:icon="@drawable/ic_baseline_delete_forever_24"
-		android:title="Delete"/>
+		android:title="@string/delete"/>
 </menu>
