--- a/app/src/main/res/menu/hone_menu.xml
+++ b/app/src/main/res/menu/hone_menu.xml
@@ -4,11 +4,11 @@
 	<item
 		android:id="@+id/item_refresh"
 		android:icon="@drawable/ic_baseline_refresh_24"
-		android:title="Refresh"
+		android:title="@string/refresh"
 		app:showAsAction="ifRoom"/>
 	<item
 		android:id="@+id/item_top"
 		android:icon="@drawable/ic_baseline_vertical_align_top_24"
-		android:title="Top"
+		android:title="@string/top"
 		app:showAsAction="ifRoom"/>
 </menu>
