--- a/app/src/main/res/menu/post_detail_menu.xml
+++ b/app/src/main/res/menu/post_detail_menu.xml
@@ -4,6 +4,6 @@
 	<item
 		android:id="@+id/item_share"
 		android:icon="@drawable/ic_baseline_share_24"
-		android:title="Share"
+		android:title="@string/share"
 		app:showAsAction="never"/>
 </menu>
