--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,4 +1,5 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 	
 	<PreferenceCategory app:title="@string/messages_header">
 		
@@ -8,11 +9,13 @@
 			app:useSimpleSummaryProvider="true"/>
 		
 		<ListPreference
-			app:defaultValue="reply"
-			app:entries="@array/reply_entries"
-			app:entryValues="@array/reply_values"
-			app:key="reply"
-			app:title="@string/reply_title"
+			android:dialogIcon="@drawable/ic_baseline_language_24"
+			android:icon="@drawable/ic_baseline_language_24"
+			app:defaultValue="en"
+			app:entries="@array/languages_entries"
+			app:entryValues="@array/languages_values"
+			app:key="language"
+			app:title="@string/set_language_title"
 			app:useSimpleSummaryProvider="true"/>
 	
 	</PreferenceCategory>
