--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -36,7 +36,8 @@
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintHorizontal_bias="0.5"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"/>
+				app:layout_constraintTop_toTopOf="parent"
+				tools:listitem="@layout/row_message_layout"/>
 		
 		</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 	</androidx.constraintlayout.widget.ConstraintLayout>
