--- a/app/src/main/res/layout/row_message_empty_layout.xml
+++ b/app/src/main/res/layout/row_message_empty_layout.xml
@@ -4,9 +4,8 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:gravity="center_horizontal"
+	android:gravity="center"
 	android:orientation="vertical"
-	android:paddingTop="70dp"
 	tools:ignore="UseCompoundDrawables">
 	
 	<ImageView
@@ -28,7 +27,7 @@
 		android:paddingTop="5dp"
 		android:paddingEnd="10dp"
 		android:paddingBottom="5dp"
-		android:text="@string/no_followers"
+		android:text="@string/no_messages"
 		android:textAlignment="center"
 		android:textSize="20sp"
 		android:textStyle="bold"/>
